--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,9 @@ AllCops:
   RunRailsCops: true
   Exclude:
     - 'bin/**/*'
+    - 'db/schema.rb'
+    - 'db/migrate/20150426231645_devise_create_users.rb'
+    - 'config/initializers/devise.rb'
 
 Documentation:
   Enabled: false
@@ -11,3 +14,6 @@ Metrics/LineLength:
 
 Style/BlockComments:
   Enabled: false
+
+Style/AlignParameters:
+  EnforcedStyle: with_fixed_indentation
