Add integration environment.

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,10 @@ development:
   <<: *default
   database: lambda_api_development
 
+integration:
+  <<: *default
+  database: lambda_api_integration
+
 stage:
   <<: *default
   database: lambda_api_stage
