Have Rubocop ignore the vendor folder.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ AllCops:
   RunRailsCops: true
   Exclude:
     - 'bin/**/*'
+    - 'vendor/**/*'
     - 'db/schema.rb'
     - 'db/migrate/20150426231645_devise_create_users.rb'
     - 'config/initializers/devise.rb'
